--- a/.github/workflows/pre-commit-autoupdate.yml
+++ b/.github/workflows/pre-commit-autoupdate.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ROBOT_MYMOVE_TOKEN }}
           GITHUB_ACTOR_NAME: "robot-mymove"
-          GITHUB_ACTOR_EMAIL: "dp3-integrations+github@truss.works"
+          GITHUB_ACTOR_EMAIL: "milmovesysadmins@caci.com"
         run: |
           git config --global user.name "${GITHUB_ACTOR_NAME}"
           git config --global user.email "${GITHUB_ACTOR_EMAIL}"
