--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,4 +7,4 @@
 # Add language specific code owners if it becomes relevant
 
 # All PRs must be approved by a member of infra
-* @deandreJones @cameroncaci @josiahzimmerman-caci @edwardharriscaci
+* @deandreJones @cameroncaci @josiahzimmerman-caci
